# tiny_rx

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  ExecutionPolicy.h  Guid.cpp  Guid.h  IExecutor.h  IObservable.h  Log.h  Observable.h  RunLoopExecutor.cpp  RunLoopExecutor.h  SingleThreadExecutor.cpp  SingleThreadExecutor.h  Subscriber.h  Subscription.cpp  Subscription.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  guid.cpp  guid.h  iobservable.h  log.h  observable.h  run_loop_executor.cpp  run_loop_executor.h  single_thread_executor.cpp  single_thread_executor.h  subscriber.h  subscription.h  thread_pool_executor.cpp  thread_pool_executor.h  tiny_rx.h  tirx.h
test/: CMakeLists.txt  ComplexSubscriptions.cpp  SimpleSource.cpp  Sources.cpp  StreamFunctions.cpp  complex_subscriptions.cpp  simple_source.cpp  sources.cpp  stream_functions.cpp  threading_model.cpp
